# teamturbo-cli

./: .gitignore  CLI_FEATURES.md  Cargo.toml  HELP_OUTPUT.md  IMPLEMENTATION_STATUS.md  USAGE_EXAMPLES.md  build-all.sh  build-macos.sh  build-windows.ps1
.git.gitlab/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git.gitlab/logs/: HEAD
.git.gitlab/logs/refs/heads/: main
.git.gitlab/logs/refs/remotes/origin/: main
.github/workflows/: build-cli.yml
scripts/: install.ps1  install.sh
src/: main.rs
src/api/: client.rs  mod.rs
src/auth/: browser.rs  manual.rs  mod.rs
src/commands/: add.rs  delete.rs  diff.rs  feedback.rs  import.rs  init.rs  list.rs  login.rs  logout.rs  mod.rs  pull.rs  push.rs  sync.rs  upgrade.rs  verify.rs  whoami.rs
src/config/: mod.rs
src/utils/: logger.rs  mod.rs  storage.rs
