[package]
name = "teamturbo-cli"
version = "1.2.5"
edition = "2021"
authors = ["TeamTurbo Team"]
description = "TeamTurbo CLI for Docuram document management"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
toml = "0.8"
sha2 = "0.10"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
webbrowser = "0.8"
rand = "0.8"
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
colored = "2.1"
flate2 = "1.0"
zip = "0.6"
regex = "1.10"

[[bin]]
name = "teamturbo"
path = "src/main.rs"
